--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "typed.js": "^2.0.11",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
